# mlp_config

./: .gitignore  README.md  pyproject.toml
src/mlp/config/: __init__.py  exceptions.py  immutable.py  ledger.py  loader.py  redaction.py  sources.py
tests/: test_accessors.py  test_exceptions.py  test_freeze.py  test_immutable.py  test_ledger.py  test_prefixes.py  test_sources.py
